--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
     <h1>Company Inc.</h1>
     <h2>For all your incorporated company needs</h2>
-     <iframe src="https://goo.gl/maps/scWz7cZwDQdBgsMN8"width="100%"></iframe></iframe>
+     <iframe src="https://goo.gl/maps/scWz7cZwDQdBgsMN8"width="100%" height="400px" frameborder="1"></iframe></iframe>
     <!-- Create an iframe tag-->
 
   </body>
