--- a/index.html
+++ b/index.html
@@ -9,14 +9,7 @@
 
     <h1>Company Inc.</h1>
     <h2>For all your incorporated company needs</h2>
-     <!--<iframe src="https://goo.gl/maps/scWz7cZwDQdBgsMN8"width="100%" height="400px" frameborder="1"></iframe>-->
-  <iframe
-  width="600"
-  height="450"
-  frameborder="0" style="border:0"
-  src="https://www.google.com/maps/embed/v1/place?key=API_KEY
-    &q=Space+Needle,Seattle+WA" allowfullscreen>
-</iframe>
-
+     <iframe src="https://goo.gl/maps/scWz7cZwDQdBgsMN8"width="100%" height="400px" frameborder="1"></iframe>
+ 
   </body>
 </html>
